Color contrast fixes for joyride button.

--- a/docroot/themes/custom/uids_base/scss/admin.scss
+++ b/docroot/themes/custom/uids_base/scss/admin.scss
@@ -1222,11 +1222,12 @@ ul.dropbutton li {
   z-index: 550;
 
   a.btn.btn-primary.btn-block {
-    color: #212529;
+    color: $secondary;
+    margin-bottom: $md;
 
     &:hover,
     &:focus {
-      color: #fff;
+      color: $secondary;
     }
   }
 }
